--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,10 @@
 inherit_from: .rubocop_todo.yml
 
+Metrics/LineLength:
+  Exclude:
+    - 'redmine_activity.gemspec'
+    - 'spec/**/*'
+
 Style/PercentLiteralDelimiters:
   Enabled: false
 
