Update gem to the latest version to fix build error
https://travis-ci.org/emsk/backlog_kit/jobs/200349504

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ rvm:
   - 2.4.0
 before_install:
   - export TZ='Asia/Tokyo'
+  - gem update --system
   - gem install bundler -v 1.12.5
 env:
   global:
