Disable `Layout/IndentHeredoc`

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,9 @@ inherit_from: .rubocop_todo.yml
 AllCops:
   DisplayCopNames: true
 
+Layout/IndentHeredoc:
+  Enabled: false
+
 Metrics/BlockLength:
   Exclude:
     - 'Rakefile'
