--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,6 +26,10 @@ Style/GuardClause:
   Exclude:
     - '*.gemspec'
 
+Style/IfUnlessModifier:
+  Exclude:
+    - 'Gemfile'
+
 Style/PercentLiteralDelimiters:
   Enabled: false
 
